[package]
name = "nvrpc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
reqwest = {version = "0.13.4", features = ["query"]}
serde = { version= "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
discord-rich-presence = "1.1.0"
rand = "0.10.1"
md5 = "0.8.0"
ctrlc = "3.5.2"

[[bin]]
name = "nvrpc"
path = "nvRPC.rs"
