[package]
name = "nvrpc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread", "signal"] }
reqwest = {version = "0.13.4", features = ["query"]}
serde = { version= "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
discord-rich-presence = "1.1.0"
rand = "0.10.2"
md5 = "0.8.1"
ctrlc = "3.5.2"
chrono = "0.4.45"

[[bin]]
name = "nvrpc"
path = "nvRPC.rs"
